# ostor_cpp

./: CMakeLists.txt  README.md
src/: compiler.cpp  compiler.h  expression.cpp  expression.h  file_process.cpp  file_process.h  main.cpp  process.cpp  process.h  shell_process.cpp  shell_process.h  value.cpp  value.h
tests/: run_tests.cpp
tests/compiler/: compiler_test.cpp  compiler_test.h
tests/compiler/data/: in1.txt  in2.txt  in3.txt  in4.txt  in5.txt  in6.txt  in7.txt  in8.txt  in9.txt  out1.txt  out3.txt  out4.txt  out5.txt  out6.txt  out7.txt  out8.txt  out9.txt
tests/expression/: expression_test.cpp  expression_test.h
tests/expression/data/: in10.txt  in11.txt  in12.txt  in13.txt  in15.txt  in16.txt  in3.txt  in4.txt  in6.txt  in7.txt  in8.txt  in9.txt  out9.txt
tests/process/: process_test.cpp  process_test.h
tests/process/data/: in10.txt  in11.txt  in3.txt  in4.txt  in5.txt  in6.txt  in7.txt  in8.txt  in9.txt  out10.txt  out11.txt  out7.txt  out8.txt  out9.txt
